--- a/pages/webdevelopment.html
+++ b/pages/webdevelopment.html
@@ -28,123 +28,55 @@
     <main>
         <div class="wrapper row1">
             <div class="row1_left">
-                <img id="ECHA" class="img ptr" src="./electric-asset/ECHA.jpg" title="Echa">
-                <img id="ROV" class="img ptr" src="./electric-asset/ROV.jpg" title="ROV">
-                <img id="SOLPAN" class="img lands" src="./electric-asset/SolarPanel.jpg" title="SOLPAN">
+                <img id="ECHA" class="img ptr" src="./web-asset/html.png" title="html">
+                <img id="ROV" class="img ptr" src="./web-asset/css.png" title="css">
+                <img id="SOLPAN" class="img lands" src="./web-asset/python.png" title="python">
             </div>
             <div class="row1_right">
                 <article>   
-                    <h2 class="heading_1">My Electrical Skills</h2>
+                    <h2 class="heading_1">My Web Development Skills</h2>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                     <ul class="list_skill">    
-                        <li> Electrical Board Design for Vehicle </li>
-                        <li> Electrical Installations and Schematics </li>
-                        <li> PCB Schematics & Layout Design </li>
-                        <li> Arduino </li>
+                        <li> HTML </li>
+                        <li> CSS </li>
+                        <li> Javascript </li>
+                        <li> Python </li>
                         
                     </ul>
                 </article>
             </div>
         </div>
         <div class="wrapper row2">
-            <center><h1 class="project"> My Project </h1></center>
+            <center><h1 class="project"> My Experience </h1></center>
             <ul class="a">
                 <li class="b">  
                    <article>
-                       <img class="imgproj" src="./electric-asset/ECHA-2.jpg" alt="Elektro Charity">
-                       <h4 class="heading"> Elektro Charity </h4>
+                       <img class="imgproj" src="./web-asset/html.png" alt="html">
+                       <h4 class="heading"> HTML </h4>
                        <p></p>
                        <footer><a class="button" href="#">see more</a></footer>
                      </article>
                 </li>
                 <li class="b">  
                    <article>
-                       <img class="imgproj" src="./electric-asset/Robot.jpg" alt="Line Follower">
-                       <h4 class="heading"> Line Follower </h4>
+                       <img class="imgproj" src="./web-asset/css.png" alt="css">
+                       <h4 class="heading"> CSS </h4>
                        <p></p>
                        <footer><a class="button" href="#">see more</a></footer>
                      </article>
                 </li>
                 <li class="b">  
                    <article>
-                       <img class="imgproj" src="./electric-asset/GulaDarah.jpg" alt="Glucometer">
-                       <h4 class="heading"> Glucometer </h4>
+                       <img class="imgproj" src="./web-asset/javascript.png" alt="javascript">
+                       <h4 class="heading"> Javascript </h4>
                        <p></p>
                        <footer><a class="button" href="#">see more</a></footer>
                      </article>
                 </li>
                 <li class="b">  
                    <article>
-                       <img class="imgproj" src="./electric-asset/SolarPanel-2.jpg" alt="SolPan System">
-                       <h4 class="heading"> SolPan System </h4>
-                       <p></p>
-                       <footer><a class="button" href="#">see more</a></footer>
-                     </article>
-                </li>
-            </ul>
-            <ul class="a">
-                <li class="b">  
-                   <article>
-                       <img class="imgproj" src="./electric-asset/ROV.jpg" alt="ROV">
-                       <h4 class="heading"> ROV </h4>
-                       <p></p>
-                       <footer><a class="button" href="#">see more</a></footer>
-                     </article>
-                </li>
-                <li class="b">  
-                   <article>
-                       <img class="imgproj" src="./electric-asset/ASV.jpg" alt="ASV">
-                       <h4 class="heading"> ASV </h4>
-                       <p></p>
-                       <footer><a class="button" href="#">see more</a></footer>
-                     </article>
-                </li>
-                <li class="b">  
-                   <article>
-                       <img class="imgproj" src="./electric-asset/SolarTracker.jpg" alt="Solar Tracker">
-                       <h4 class="heading"> Solar Tracker </h4>
-                       <p></p>
-                       <footer><a class="button" href="#">see more</a></footer>
-                     </article>
-                </li>
-                <li class="b">  
-                   <article>
-                       <img class="imgproj" src="./electric-asset/InverterinoPSW.jpg" alt="Inverterino PSW">
-                       <h4 class="heading">Inverterino PSW</h4>
-                       <p></p>
-                       <footer><a class="button" href="#">see more</a></footer>
-                     </article>
-                </li>
-            </ul>
-            <ul class="a">
-                <li class="b">  
-                   <article>
-                       <img class="imgproj" src="./electric-asset/Plant Incubator.jpg" alt="Plant Incubator">
-                       <h4 class="heading"> Plant Incubator </h4>
-                       <p></p>
-                       <footer><a class="button" href="#">see more</a></footer>
-                     </article>
-                </li>
-                <li class="b">  
-                   <article>
-                       <img class="imgproj" src="./electric-asset/PCBSimulation.jpg" alt="PCB Simulation">
-                       <h4 class="heading"> PCB Simulation </h4>
-                       <p></p>
-                       <footer><a class="button" href="#">see more</a></footer>
-                     </article>
-                </li>
-                <li class="b">  
-                   <article>
-                       <img class="imgproj" src="./electric-asset/" alt="NaN">
-                       <h4 class="heading"> Kwh Meter </h4>
-                       <p></p>
-                       <footer><a class="button" href="#">see more</a></footer>
-                     </article>
-                </li>
-                <li class="b">  
-                   <article>
-                       <img class="imgproj" src="./electric-asset/" alt="NaN">
-                       <h4 class="heading"> Smart Switch </h4>
+                       <img class="imgproj" src="./web-asset/python.png" alt="python">
+                       <h4 class="heading"> Python </h4>
                        <p></p>
                        <footer><a class="button" href="#">see more</a></footer>
                      </article>
