--- a/pages/machinelearning.html
+++ b/pages/machinelearning.html
@@ -34,7 +34,7 @@
             </div>
             <div class="row1_right">
                 <article>   
-                    <h2 class="heading_1">My Electrical Skills</h2>
+                    <h2 class="heading_1">My Machine Learning Skills</h2>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                     <ul class="list_skill">    
                         <li> Electrical Board Design for Vehicle </li>
