--- a/pages/webdevelopment.html
+++ b/pages/webdevelopment.html
@@ -16,7 +16,7 @@
             <div id="mainav" class="row0_right">
                 <ul class="clear" type="none">
                     <li><a class="nav" href="../index.html"> Home </a></li>
-                    <li><a class="navinverse" href="#"> Skill </a></li>
+                    <li><a class="navinverse" href="../index.html#row2"> Skill </a></li>
                     <li><a class="navinverse" href="#"> Project </a></li>
                     <li><a class="navinverse" href="#"> Education </a></li>
                 </ul>
