--- a/pages/webdevelopment.html
+++ b/pages/webdevelopment.html
@@ -22,7 +22,7 @@
                 </ul>
             </div>
         </div>
-        <hr width="100%"  padding: 0; " >
+        <hr width="100%"  padding: 0;>
     </header>
     <!-- ######################################################################## -->
     <main>
