--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </ul>
             </div>
         </div>
-        <hr width="100%"  padding: 0; " >
+        <hr width="100%"  padding: 0; >
     </header>
     <!-- ################################################################### -->
     <main>
@@ -86,7 +86,9 @@
         <div class="row3_left">
             <img class="c" src="./assets/Adli.gif" alt="">
         </div>
-        <div class="row3_right"><h3 class="d">©2021 - All rights reserved - Adli's Portofolio. </h3></div>
+        <div class="row3_right">
+            <h3 class="d">©2021 - All rights reserved - Adli's Portofolio. </h3>
+        </div>
     </footer>
 </body>
 </html>
