--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/robot-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/robot-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Robot 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/robot-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ASSV - Makara Phantom"><i class="bx bx-plus"></i></a>
                 <a href="#" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -346,7 +346,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/robot-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/robot2-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Robot 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/robot2-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ROV - Makara X"><i class="bx bx-plus"></i></a>
                 <a href="#" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -356,7 +356,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/robot-3.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/robot-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Robot 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/robot-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ASV - Makara MH4 Mark II"><i class="bx bx-plus"></i></a>
                 <a href="#" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -366,7 +366,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/Covent.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/Covent.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Covent"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/Covent.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Covent - HR Sensor"><i class="bx bx-plus"></i></a>
                 <a href="#" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -376,7 +376,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/ECHA.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/ECHA.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ECHA"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/ECHA.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Electro Charity 2020"><i class="bx bx-plus"></i></a>
                 <a href="#" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -386,7 +386,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/InverterinoPSW.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/InverterinoPSW.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="InverterinoPSW"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/InverterinoPSW.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Inverterino Pure Sine Wave"><i class="bx bx-plus"></i></a>
                 <a href="#" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -396,7 +396,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/robot-4.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/robot-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Robot 4"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/robot-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Remote-Line Follower Robot"><i class="bx bx-plus"></i></a>
                 <a href="#" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -405,7 +405,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/SolarTracker.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/SolarTracker.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Solar Tracker"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/SolarTracker.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Embedded System - Solar Tracker"><i class="bx bx-plus"></i></a>
                 <a href="#" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
