--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
                 <p>+62 812 1824 0274</p>
               </div>
 
-              <iframe src="https://maps.google.com/maps?q=jalan%20pipit%203%20no%20146&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <iframe src="https://maps.google.com/maps?q=depok,%20jalan%20pipit%203%20no%20146&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
             </div>
 
           </div>
